--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = '/'
+baseURL = 'https://morskyjezek.github.io/si667-2026-activities/'
 languageCode = 'en-us'
 title = 'Digital Curation Docs - SI 667 - Winter 2026'
 # Theme stuff
@@ -124,3 +124,7 @@ pagination.pagerSize = 5
   replacements = "github.com/panr/hugo-theme-terminal/v4 -> themes/hugo-terminal"
 #[[module.imports]]
 #  path = 'github.com/panr/hugo-theme-terminal/v4'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
